...
struct SearchStoreView: View {
    
    @ObservedObject var viewModel: SearchStoreViewModel
    
    var searchTextView: some View {
        HStack {
            TextField("Pesquisar loja", text: $viewModel.searchText)
                .padding(7)
                .padding(.horizontal, 25)
                .background(Color(.systemGray6))
                .clipShape(RoundedRectangle(cornerRadius: 8))
                .autocorrectionDisabled()
            
            Button {
                self.viewModel.searchText = ""
            } label: {
                Image(systemName: "xmark.circle.fill")
                    .foregroundStyle(.gray)
                    .padding(.trailing, 8)
            }
        }
        .padding(.top, 8)
        .padding(.bottom, 8)
...
